--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./src/assets/favicon-32x32.png"
+        />
+    <title>Tip Calculator</title>
   </head>
   <body>
     <div id="root"></div>
